--- a/lol/draft.html
+++ b/lol/draft.html
@@ -3,6 +3,7 @@
     <head>
         <title>LOL Draft OverPy</title>
         <link rel="stylesheet" href="../css/lol.css">
+        <meta http-equiv="refresh" content="3">
     </head>
     <body>
         <div class="draft_titleBlock" id="draft_titleBlockBlue">
