--- a/lol/game.html
+++ b/lol/game.html
@@ -3,6 +3,7 @@
     <head>
         <title>LOL Game OverPy</title>
         <link rel="stylesheet" href="../css/lol.css">
+        <meta http-equiv="refresh" content="3">
     </head>
     <body>
         <div class="game_titleBlock" id="game_titleBlockBlue">
