updated draft overlay screen

--- a/lol/draft.html
+++ b/lol/draft.html
@@ -6,22 +6,11 @@
         <meta http-equiv="refresh" content="3">
     </head>
     <body>
-        <div class="draft_titleBlock" id="draft_titleBlockBlue">
-            <p class="draft_titleBlock" id="blueTeam">Blue</p>
-            <div class="draft_scoreBlock" id="draft_scoreBlockBlue">
-                <p class="draft_scoreBlock" id="blueScore">0</p>
-            </div>
-        </div>
-        <div class="draft_titleBlock" id="draft_titleBlockRed">
-            <p class="draft_titleBlock" id="redTeam">Red</p>
-            <div class="draft_scoreBlock" id="draft_scoreBlockRed">
-                <p class="draft_scoreBlock" id="redScore">0</p>
-            </div>
-        </div>
-        <div id="draft_bottom">
-            <p id="draft_game">Game 1</p>
-            <p id="draft_patch">Patch 14.10</p>
-        </div>
+        <img id="overlayImg" src="../assets/1 Man Draft Overlay.png"/>
+        <div class="draft_team" id="draft_blue"><p class="draft_team" id="draft_blueName">Blue</p></div>
+        <div class="draft_team" id="draft_red"><p class="draft_team" id="draft_redName">Red</p></div>
+        <div class="draft_score" id="draft_blueScore"><p class="draft_score" id="blueScore">0</p></div>
+        <div class="draft_score" id="draft_redScore"><p class="draft_score" id="redScore">0</p></div>
         <script src="draft.js"></script>
     </body>
 </html>
