--- a/lol/data.html
+++ b/lol/data.html
@@ -30,6 +30,10 @@
                         <label for="patch">Patch Number</label><br>
                         <input type="text" id="patch" name="patch" value="10.10">
                     </td>
+                    <td>
+                        <label for="casters">Caster Count</label><br>
+                        <input type="number" min="1" max="3" id="casters" name="casters" value="1">
+                    </td>
                 </tr>
                 <tr style="height: 1em;"></tr>
                 <tr>
