--- a/lol/data.html
+++ b/lol/data.html
@@ -35,6 +35,12 @@
                         <input type="number" min="1" max="3" id="casters" name="casters" value="1">
                     </td>
                 </tr>
+                <tr>
+                    <td colspan="2">
+                        <label for="potw">Player of the Week</label><br>
+                        <input type="text" id="potw" name="potw" value="Everyone" style="width: 100%;">
+                    </td>
+                </tr>
                 <tr style="height: 1em;"></tr>
                 <tr>
                     <td>
