added starting and ending screens

--- a/lol/game.html
+++ b/lol/game.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>LOL Game OverPy</title>
+        <title>BL Game Overlay</title>
         <link rel="stylesheet" href="../css/lol.css">
         <meta http-equiv="refresh" content="3">
     </head>
