--- a/lol/intro.html
+++ b/lol/intro.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>LOL Draft OverPy</title>
+        <title>BL Intro Overlay</title>
         <link rel="stylesheet" href="../css/lol.css">
         <meta http-equiv="refresh" content="3">
     </head>
