added caster name support

--- a/lol/draft.html
+++ b/lol/draft.html
@@ -11,6 +11,9 @@
         <div class="draft_team" id="draft_red"><p class="draft_team" id="draft_redName">Red</p></div>
         <div class="draft_score" id="draft_blueScore"><p class="draft_score" id="blueScore">0</p></div>
         <div class="draft_score" id="draft_redScore"><p class="draft_score" id="redScore">0</p></div>
+        <div class="draft_caster" id="draft_caster1Box"><p class="draft_caster" id="draft_caster1"></p></div>
+        <div class="draft_caster" id="draft_caster2Box"><p class="draft_caster" id="draft_caster2"></p></div>
+        <div class="draft_caster" id="draft_caster3Box"><p class="draft_caster" id="draft_caster3"></p></div>
         <script src="draft.js"></script>
     </body>
 </html>
