--- a/lol/data.html
+++ b/lol/data.html
@@ -9,36 +9,44 @@
             <table>
                 <tr>
                     <td>
-                        <label for="blue">Blue Team</label><br>
-                        <input type="text" id="blue" name="blue" value="blue">
+                        <label>Blue Team</label><br>
+                        <input type="text" id="blue" value="blue">
                     </td>
                     <td>
-                        <label for="blueScore">Blue Score</label><br>
-                        <input type="number" min="0" id="blueScore" name="blueScore" value="0">
+                        <label>Blue Score</label><br>
+                        <input type="number" min="0" id="blueScore" value="0">
                     </td>
                 </tr>
                     <td>
-                        <label for="red">Red Team</label><br>
-                        <input type="text" id="red" name="red" value="red">
+                        <label>Red Team</label><br>
+                        <input type="text" id="red" value="red">
                     </td>
                     <td>
-                        <label for="redScore">Red Score</label><br>
-                        <input type="number" min="0" id="redScore" name="redScore" value="0">
+                        <label>Red Score</label><br>
+                        <input type="number" min="0" id="redScore" value="0">
                     </td>
                 <tr>
                     <td>
-                        <label for="patch">Patch Number</label><br>
-                        <input type="text" id="patch" name="patch" value="10.10">
+                        <label>Patch Number</label><br>
+                        <input type="text" id="patch" value="10.10">
                     </td>
                     <td>
-                        <label for="casters">Caster Count</label><br>
-                        <input type="number" min="1" max="3" id="casters" name="casters" value="1">
+                        <label>Caster Count</label><br>
+                        <input type="number" min="1" max="3" id="casters" value="1">
                     </td>
                 </tr>
+                <!-- 
                 <tr>
                     <td colspan="2">
-                        <label for="potw">Player of the Week</label><br>
-                        <input type="text" id="potw" name="potw" value="Everyone" style="width: 100%;">
+                        <label for="starting">Starting Screen Text</label><br>
+                        <input type="text" id="starting" value="Blue vs Red" style="width: 100%;">
+                    </td>
+                </tr> 
+                -->
+                <tr>
+                    <td colspan="2">
+                        <label>Player of the Week Text</label><br>
+                        <input type="text" id="potw" value="Everyone" style="width: 100%;">
                     </td>
                 </tr>
                 <tr style="height: 1em;"></tr>
@@ -48,6 +56,26 @@
                     </td>
                     <td>
                         <input id="swap" type="submit" value="Swap">
+                    </td>
+                </tr>
+            </table>
+            <table id="casterTable">
+                <tr>
+                    <td colspan="2">
+                        <label>Caster 1</label>
+                        <input type="text" id="caster1" value="Caster 1" style="width: 100%;">
+                    </td>
+                </tr>
+                <tr>
+                    <td colspan="2">
+                        <label>Caster 2</label>
+                        <input type="text" id="caster2" value="Caster 2" style="width: 100%;">
+                    </td>
+                </tr>
+                <tr>
+                    <td colspan="2">
+                        <label>Caster 3</label>
+                        <input type="text" id="caster3" value="Caster 3" style="width: 100%;">
                     </td>
                 </tr>
             </table>
