--- a/lol/intro.html
+++ b/lol/intro.html
@@ -7,6 +7,9 @@
     </head>
     <body>
         <img id="overlayImg" src="../assets/1 Man Intro.png"/>
+        <div class="intro_caster" id="intro_caster1Box"><p class="intro_caster" id="intro_caster1"></p></div>
+        <div class="intro_caster" id="intro_caster2Box"><p class="intro_caster" id="intro_caster2"></p></div>
+        <div class="intro_caster" id="intro_caster3Box"><p class="intro_caster" id="intro_caster3"></p></div>
         <div id="intro_POTW"><p id="POTW">Everyone in the League</p></div>
         <script src="intro.js"></script>
     </body>
