small change to update pages much more efficiently

--- a/lol/draft.html
+++ b/lol/draft.html
@@ -3,7 +3,7 @@
     <head>
         <title>BL Draft Overlay</title>
         <link rel="stylesheet" href="../css/lol.css">
-        <meta http-equiv="refresh" content="3">
+        <!-- <meta http-equiv="refresh" content="3"> -->
     </head>
     <body>
         <img id="overlayImg" src="../assets/1 Man Draft Overlay.png"/>
