added starting soon text input for better customization

--- a/lol/data.html
+++ b/lol/data.html
@@ -49,6 +49,12 @@
                         <input type="text" id="potw" value="Everyone" style="width: 100%;">
                     </td>
                 </tr>
+                <tr>
+                    <td colspan="2">
+                        <label>Starting Soon text</label>
+                        <input type="text" id="motd" value="" style="width: 100%;">
+                    </td>
+                </tr>
                 <tr style="height: 1em;"></tr>
                 <tr>
                     <td>
