rewrote background for update.js and added score page

--- a/lol/data.html
+++ b/lol/data.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>BL Overlay</title>
-        <link rel="stylesheet" href="../css/submit.css">
+        <link rel="stylesheet" href="../css/data.css">
     </head>
     <body>
         <form id="form">
@@ -26,23 +26,11 @@
                         <input type="number" min="0" id="redScore" value="0">
                     </td>
                 <tr>
-                    <td>
+                    <td colspan="2">
                         <label>Patch Number</label><br>
                         <input type="text" id="patch" value="10.10">
                     </td>
-                    <td>
-                        <label>Caster Count</label><br>
-                        <input type="number" min="1" max="3" id="casters" value="1">
-                    </td>
                 </tr>
-                <!-- 
-                <tr>
-                    <td colspan="2">
-                        <label for="starting">Starting Screen Text</label><br>
-                        <input type="text" id="starting" value="Blue vs Red" style="width: 100%;">
-                    </td>
-                </tr> 
-                -->
                 <tr>
                     <td colspan="2">
                         <label>Player of the Week Text</label><br>
@@ -62,26 +50,6 @@
                     </td>
                     <td>
                         <input id="swap" type="submit" value="Swap">
-                    </td>
-                </tr>
-            </table>
-            <table id="casterTable">
-                <tr>
-                    <td colspan="2">
-                        <label>Caster 1</label>
-                        <input type="text" id="caster1" value="Caster 1" style="width: 100%;">
-                    </td>
-                </tr>
-                <tr>
-                    <td colspan="2">
-                        <label>Caster 2</label>
-                        <input type="text" id="caster2" value="Caster 2" style="width: 100%;">
-                    </td>
-                </tr>
-                <tr>
-                    <td colspan="2">
-                        <label>Caster 3</label>
-                        <input type="text" id="caster3" value="Caster 3" style="width: 100%;">
                     </td>
                 </tr>
             </table>
