--- a/lol/draft.html
+++ b/lol/draft.html
@@ -6,14 +6,11 @@
         <!-- <meta http-equiv="refresh" content="3"> -->
     </head>
     <body>
-        <img id="overlayImg" src="../assets/1 Man Draft Overlay.png"/>
-        <div class="draft_team" id="draft_blue"><p class="draft_team" id="draft_blueName">Blue</p></div>
-        <div class="draft_team" id="draft_red"><p class="draft_team" id="draft_redName">Red</p></div>
+        <img id="overlayImg" src="../assets/draft.png"/>
+        <div class="draft_team" id="draft_blue"><p class="draft_team draft_blueTeam" id="blueTeam">Blue</p></div>
+        <div class="draft_team" id="draft_red"><p class="draft_team draft_redTeam" id="redTeam">Red</p></div>
         <div class="draft_score" id="draft_blueScore"><p class="draft_score" id="blueScore">0</p></div>
         <div class="draft_score" id="draft_redScore"><p class="draft_score" id="redScore">0</p></div>
-        <div class="draft_caster" id="draft_caster1Box"><p class="draft_caster" id="draft_caster1"></p></div>
-        <div class="draft_caster" id="draft_caster2Box"><p class="draft_caster" id="draft_caster2"></p></div>
-        <div class="draft_caster" id="draft_caster3Box"><p class="draft_caster" id="draft_caster3"></p></div>
-        <script src="draft.js"></script>
+        <script src="update.js"></script>
     </body>
 </html>
