--- a/lol/game.html
+++ b/lol/game.html
@@ -19,9 +19,9 @@
             </div>
         </div>
         <div id="game_bottom">
-            <p id="game_game">Game 1</p>
-            <p id="game_patch">Patch 14.10</p>
+            <p class="game_game" id="game">Game 1</p>
+            <p class="game_patch" id="patch">Patch 14.10</p>
         </div>
-        <script src="game.js"></script>
+        <script src="update.js"></script>
     </body>
 </html>
