--- a/lol/starting.html
+++ b/lol/starting.html
@@ -10,6 +10,6 @@
         </video>
         <div id="startingMOTD"><p id="motd">Coming Up: Gameplay</p></div>
 
-        <script src="starting.js"></script>
+        <script src="update.js"></script>
     </body>
 </html>
