hopefully last adjustment to logo page

--- a/assets/logo.html
+++ b/assets/logo.html
@@ -3,6 +3,6 @@
         <title>BL Logo</title>
     </head>
     <body style="background: rgba(0, 0, 0, 0)">
-        <img src="bl.png">
+        <img src="bl.png" style="width: 100%;">
     </body>
 </html>
