hopefully last adjustment to logo page 3

--- a/assets/logo.html
+++ b/assets/logo.html
@@ -3,6 +3,6 @@
         <title>BL Logo</title>
     </head>
     <body style="background: rgba(0, 0, 0, 0)">
-        <img src="bl.png" style="height: 100%;">
+        <img src="bl.png" style="height: 100%; display: block; margin-left: auto; margin-right: auto;">
     </body>
 </html>
