scores.html not working in only obs...

--- a/lol/scores.html
+++ b/lol/scores.html
@@ -5,14 +5,14 @@
     </head>
     <body class="score_body">
         <div class="score_blueMain">
-            <p id="blueTeam" class="score_name">ONE</p>
+            <p id="blueTeam" class="score_name">Blue</p>
         </div>
         <div class="score_blueScore">
             <p id="blueScore" class="score_score">0</p>
         </div>
 
         <div class="score_redMain">
-            <p id="redTeam" class="score_name">TWO</p>
+            <p id="redTeam" class="score_name">Red</p>
         </div>
         <div class="score_redScore">
             <p id="redScore" class="score_score">0</p>
