issue solved and new obs scene collection made

--- a/lol/scores.html
+++ b/lol/scores.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>LOL Score Screen</title>
+        <title>BL Score Screen</title>
         <link rel="stylesheet" href="../css/lol.css">
     </head>
     <body class="score_body">
