testing groundwork for displaying playernames

--- a/lol/data.html
+++ b/lol/data.html
@@ -17,6 +17,7 @@
                         <input type="number" min="0" id="blueScore" value="0">
                     </td>
                 </tr>
+                <tr>
                     <td>
                         <label>Red Team</label><br>
                         <input type="text" id="red" value="red">
@@ -25,6 +26,57 @@
                         <label>Red Score</label><br>
                         <input type="number" min="0" id="redScore" value="0">
                     </td>
+                </tr>
+                <tr>
+                    <td>
+                        <label>Blue Top</label><br>
+                        <input type="text" id="blueTop" value="">
+                    </td>
+                    <td>
+                        <label>Red Top</label><br>
+                        <input type="text" id="redTop" value="">
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <label>Blue Jgl</label><br>
+                        <input type="text" id="blueJgl" value="">
+                    </td>
+                    <td>
+                        <label>Red Jgl</label><br>
+                        <input type="text" id="redJgl" value="">
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <label>Blue Mid</label><br>
+                        <input type="text" id="blueMid" value="">
+                    </td>
+                    <td>
+                        <label>Red Mid</label><br>
+                        <input type="text" id="redMid" value="">
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <label>Blue Bot</label><br>
+                        <input type="text" id="blueBot" value="">
+                    </td>
+                    <td>
+                        <label>Red Bot</label><br>
+                        <input type="text" id="redBot" value="">
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <label>Blue Sup</label><br>
+                        <input type="text" id="blueSup" value="">
+                    </td>
+                    <td>
+                        <label>Red Sup</label><br>
+                        <input type="text" id="redSup" value="">
+                    </td>
+                </tr>
                 <tr>
                     <td colspan="2">
                         <label>Patch Number</label><br>
