--- a/lol/draft.html
+++ b/lol/draft.html
@@ -11,6 +11,18 @@
         <div class="draft_team" id="draft_red"><p class="draft_team draft_redTeam" id="redTeam">Red</p></div>
         <div class="draft_score" id="draft_blueScore"><p class="draft_score" id="blueScore">0</p></div>
         <div class="draft_score" id="draft_redScore"><p class="draft_score" id="redScore">0</p></div>
+
+        <p class="draft_player draft_pblue draft_top" id="blueTop"></p>
+        <p class="draft_player draft_pblue draft_jgl" id="blueJgl"></p>
+        <p class="draft_player draft_pblue draft_mid" id="blueMid"></p>
+        <p class="draft_player draft_pblue draft_bot" id="blueBot"></p>
+        <p class="draft_player draft_pblue draft_sup" id="blueSup"></p>
+
+        <p class="draft_player draft_pred draft_top" id="redTop"></p>
+        <p class="draft_player draft_pred draft_jgl" id="redJgl"></p>
+        <p class="draft_player draft_pred draft_mid" id="redMid"></p>
+        <p class="draft_player draft_pred draft_bot" id="redBot"></p>
+        <p class="draft_player draft_pred draft_sup" id="redSup"></p>
         <script src="update.js"></script>
     </body>
 </html>
